Add backend server, admin functionality, real-time features, and database setup

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>muse-today</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Social Connect</title>
+    <meta name="description" content="Social Connect is a social media platform that allows you to connect with your friends and family." />
+    <meta name="author" content="Inganji" />
 
-    <meta property="og:title" content="muse-today" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Social Connect" />
+    <meta property="og:description" content="Social Connect is a social media platform that allows you to connect with your friends and family." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" href="/favicon.png" />
   </head>
 
   <body>
